# BioSensIA-DC

./: .gitignore  2026-07-14-uniprot_enrichment.html  2026-07-14-uniprot_enrichment.qmd  2026-07-15-uniprot_enrichment_en.html  2026-07-15-uniprot_enrichment_en.qmd  README.md  README.qmd  analyzing-pairs.html  analyzing-pairs.qmd  benchmark_audit.html  benchmark_audit.qmd  biosensia_finetuning.py  biosensia_ranked_compounds.py  biosensia_retrieval.py  biosensia_target_fishing.py  biosensia_target_fishing_benchmark.py  biosensia_uniprot_enrichment.py  biosensia_utils.py  build_pairs.slurm  build_uniprot_sidecars.sh  compare_pocket_geometries.py  examining_the_sidecars.html  examining_the_sidecars.qmd  finetune_2gpu.slurm  lmdb_helpers.py  main.py  mo_analyze_pairs.py  mo_benchmark.py  mo_benchmark_audit.py  mo_shell.py  mo_target_fishing.py  pocket_geometry_analysis.html  pocket_geometry_analysis.qmd  pyproject.toml  retrieve_ranked_compounds.sh  skills-lock.json  train_biosensia_finetune.sh  train_drugclip_1gpu.slurm  train_drugclip_2gpu.slurm  uniprot_enrichment.qmd
data/: chembl_compounds.jsonl  oka.lmdb  pubchem_compounds.jsonl  query_mol.lmdb  query_pocket.lmdb
data/biosensia_finetune/: training_data_pairs.parquet
jobs/: build_pairs-19278.err  drugclip-19242.err  drugclip-19242.out  drugclip-19243.err  drugclip-19243.out  drugclip-19245.err  drugclip-19245.out  drugclip-19246.err  drugclip-19246.out  drugclip-19247.err  drugclip-19248.err  drugclip-19248.out  drugclip-19255.err  drugclip-19255.out  drugclip-19256.err  drugclip-19256.out  drugclip-19265.err  drugclip-19265.out  drugclip-19268.err  drugclip-19268.out  drugclip-19282.err  drugclip-19282.out  drugclip-19437.err  drugclip-19437.out  drugclip-19438.err  drugclip-19438.out  fine-tune-19439.err  fine-tune-19439.out  fine-tune-19440.err  fine-tune-19440.out  fine-tune-19441-projection_lr1e-4_tau071_lambda-mp1pm0_bs96_bsv48_uf1_ppl8.err  fine-tune-19441-projection_lr1e-4_tau071_lambda-mp1pm0_bs96_bsv48_uf1_ppl8.out  fine-tune-19446-projection_lr1e-4_tau071_lambda-mp75pm25_bs96_bsv48_uf1_ppl8.err  fine-tune-19446-projection_lr1e-4_tau071_lambda-mp75pm25_bs96_bsv48_uf1_ppl8.out  fine-tune-19494-projection_lr1e-4_tau071_lambda-mp5pm5_bs96_bsv48_uf1_ppl8.err  fine-tune-19494-projection_lr1e-4_tau071_lambda-mp5pm5_bs96_bsv48_uf1_ppl8.out  fine-tune-19517-projection_and_temp_lr1e-4_tau071_lambda-mp1pm0_bs96_bsv48_uf1_ppl8.err  fine-tune-19517-projection_and_temp_lr1e-4_tau071_lambda-mp1pm0_bs96_bsv48_uf1_ppl8.out  fine-tune-19519-projection_and_temp_lr1e-4_lambda-mp75pm25_bs96_bsv48_uf1_ppl8.err  fine-tune-19519-projection_and_temp_lr1e-4_lambda-mp75pm25_bs96_bsv48_uf1_ppl8.out  (+2 more)
notebooks/: data  target_fishing.py
scratch/: 2026-07-06-faulty-benchmarks-history-sagres.txt  analyze_pdb_complexes.py  analyze_training_data.py  build_pairs_frame.py  pdb_complexes_metadata_cache.json
tests/: test_biosensia_finetuning.py  test_biosensia_retrieval.py  test_biosensia_utils.py  test_compare_pocket_geometries.py  test_target_fishing.py  test_target_fishing_benchmark.py  test_uniprot_enrichment.py
