[project]
name = "BioSensIA-DC"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26,<2",
  "torch",
  "torchvision",
  "torchaudio",
  "rdkit==2022.9.5",
  "setuptools",
  "lmdb>=2.2.0",
  "tokenizers>=0.23.1",
  "tensorboard>=2.20.0",
]

# IMPORTANT:
# Uni-Core is manually overlaid into .venv with CUDA extensions.
# Do not run plain `uv sync` after this unless you are prepared to reinstall Uni-Core.
# Use instead:
#   uv sync --inexact

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true
