[project]
name = "BioSensIA-DC"
version = "0.1.0"
requires-python = ">=3.11,<3.12"
dependencies = [
  "numpy>=1.26,<2",
  "torch",
  "torchvision",
  "torchaudio",
  "rdkit==2022.9.5",
  "setuptools",
  "lmdb>=2.2.0",
  "tokenizers>=0.23.1",
  "tensorboard>=2.20.0",
  "ipython>=9.13.0",
  "scikit-learn>=1.8.0",
  "pandas>=3.0.2",
  "ninja>=1.13.0",
  "biopandas>=0.5.1",
  "polars>=1.40.1",
  "tqdm>=4.67.3",
  "marimo>=0.23.6",
  "altair>=6.1.0",
]

#######################################################################################
#                                                                                    #
#  IMPORTANT:                                                                        #
#                                                                                    #
#  Uni-Core must be manually overlaid into .venv with CUDA extensions.               #
#  (see README for details on how to do this).                                       #
#                                                                                    #
#  After installing Uni-Core, DO NOT RUN PLAIN `uv sync`.                            #
#  This will remove Uni-Core from the environment and you will have to reinstall it. #
#                                                                                    #
#  Use instead:                                                                      #
#                                                                                    #
#    uv sync --inexact                                                               #
#                                                                                    #
#######################################################################################

[tool.uv.sources]
torch = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchvision = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]
torchaudio = [
  { index = "pytorch-cu124", marker = "sys_platform == 'linux'" },
]

[[tool.uv.index]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
pythonpath = ["."]
